# infra-demo-orchestrator

./: .gitignore  README.md  docker-compose.yml
01-platform-layer/: Pulumi.main.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
01-platform-layer/components/: argocd.py  eks.py  flux.py  jenkins.py  vpc.py
02-environment-layer/: Pulumi.dev.yaml  Pulumi.yaml  pyproject.toml
03-envAddOn-layer/: Pulumi.dev.yaml  Pulumi.yaml  pyproject.toml
documentation/: CICD-Design.md  Deployment-Design.md  Secrets-Design.md  main.md
local-deploy/: .env.template  README.md  docker-compose.yml  proxy.conf
