[project]
name = "01-platform-layer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
    "pulumi-awsx>=3.1.0",
    "pulumi-eks>=4.2.0",
    "pulumi-flux>=1.0.1",
    "pulumi-github>=6.10.0",
    "pulumi-tls>=5.2.3",
    "setuptools>=80.9.0",
]
